@@ -6,9 +6,9 @@ no-member:16:6::Module 'sys' has no 'stdoout' member; maybe 'stdout'?:INFERENCE
 no-name-in-module:23:0::No name 'compiile' in module 're'
 no-name-in-module:23:0::No name 'findiiter' in module 're'
 pointless-statement:26:0::Statement seems to have no effect
-no-name-in-module:34:4::No name 'anything' in module 'collections'
-no-name-in-module:44:4::No name 'indeed_missing' in module 'collections'
-no-name-in-module:49:4::No name 'emit' in module 'collections'
-no-name-in-module:60:8::No name 'emit2' in module 'collections'
-no-name-in-module:65:0::No name 'lala' in module 'functional.n.no.no_self_use'
-no-name-in-module:66:0::No name 'bla' in module 'functional.n.no.no_self_use'
+no-name-in-module:39:4::No name 'anything' in module 'collections'
+no-name-in-module:54:4::No name 'indeed_missing' in module 'collections'
+no-name-in-module:59:4::No name 'emit' in module 'collections'
+no-name-in-module:76:8::No name 'emit2' in module 'collections'
+no-name-in-module:81:0::No name 'lala' in module 'functional.n.no.no_self_use'
+no-name-in-module:82:0::No name 'bla' in module 'functional.n.no.no_self_use'
