@@ -11,6 +11,8 @@ Release date: TBA
 ..
   Put new features here and also in 'doc/whatsnew/2.12.rst'
 
+* Added support for ``ModuleNotFoundError`` (``import-error`` and ``no-name-in-module``).
+  ``ModuleNotFoundError`` inherits from ``ImportError`` and was added in Python ``3.6``
 
 
 What's New in Pylint 2.11.2?
